operators-secret/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operators-control-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: operators-control-center
      app.kubernetes.io/instance: operators-control-center
  template:
    metadata:
      labels:
        app.kubernetes.io/name: operators-control-center
        app.kubernetes.io/instance: operators-control-center
    spec:
      serviceAccountName: operators-control-center
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: operators-control-center
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: rg.fr-par.scw.cloud/apogasa/operators-control-center:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
