operators-secret/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operators-control-center
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: operators-control-center
    app.kubernetes.io/instance: operators-control-center
