operators-secret/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operators-control-center
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - operators.kagent-devopsdays.ch
      secretName: operators-workshop-tls
  rules:
    - host: operators.kagent-devopsdays.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operators-control-center
                port:
                  number: 80
